# pywmsdump

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_capabilities.py  test_georss.py  test_kml.py  test_precision.py  test_strip_point.py
tests/samples/: georss_empty_feed.xml  georss_merge_polygons.geojsonl  georss_merge_polygons.xml  georss_no_support.xml  georss_point.geojsonl  georss_point.xml  kml_linestrings.geojsonl  kml_linestrings.xml  kml_no_features.xml  kml_no_support_1.xml  kml_no_support_2.xml  kml_one_multigeometry.geojsonl  kml_one_multigeometry.xml  kml_points.geojsonl  kml_points.xml  layer_missing.xml  linestring.geojsonl  linestring.xml  missing_sort_key.xml  point_single.geojsonl  point_single.xml  polygon.geojsonl  polygon.xml  wfs_capabilities.json  wfs_capabilities.xml  wfs_disabled_esri.xml  wfs_disabled_ows_namespace.xml  wms_capabilities.json  wms_capabilities.xml  wms_capabilities_incomplete.json  wms_capabilities_incomplete.xml  wms_capabilities_sax_cleanup_bug.json  wms_capabilities_sax_cleanup_bug.xml
wmsdump/: __init__.py  capabilities.py  cli.py  dumper.py  errors.py  georss_helper.py  geoserver.py  hole_puncher.py  kml_helper.py  logging.py  page_scraper.py  props_helper.py  state.py  wms_helper.py  xml_helper.py
