[project]
name = "wmsdump"
description = "Library for extraction of data from WMS/WFS endpoints"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.1.7",
    "colorlog>=6.9.0",
    "jsonschema>=4.23.0",
    "kml2geojson>=5.1.0",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]
dynamic = ["version", "urls"]

[project.scripts]
wms-extractor = "wmsdump.cli:main"
punch-holes = "wmsdump.hole_puncher:main [punch-holes]"

[project.optional-dependencies]
punch-holes = [
    "geoindex-rs>=0.2.0",
    "numpy>=2.2.1",
    "shapely>=2.0.6",
]
proj = [
    "pyproj>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.ruff.lint]
ignore = [
    "E402" # Module level import not at top of file
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "wmsdump/_version.py"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/ramSeraph/pywmsdump"
source_archive = "https://github.com/ramSeraph/pywmsdump/archive/{commit_hash}.zip"
